feat: Final Release Candidate v1.0.0
- Integrated full Internationalization (I18n) for Killer Apps and Viewers (EN/FR).
- Applied unified Dark Theme across all visualizations.
- Fixed critical build issues in jscience-social (Real dependency).
- Implemented headless UI integration tests (TrajectoryAppTest).
- Added JPackage installer script and CI/CD workflow.
- Standardized project structure and removed legacy code.